azure.kuber.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: rest-koa-back
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rest-koa-back
    spec:
      containers:
      - name: rest-koa-back
        image: redis
        ports:
        - containerPort: 6379
          name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: rest-koa-back
spec:
  ports:
  - port: 6379
  selector:
    app: rest-koa-back
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: rest-koa-front
spec:
  replicas: 1 
  template:
    metadata:
      labels:
        app: rest-koa-front
    spec:
      containers:
      - name: rest-koa-front
        image: svyatslav/rest-koa-front:v2
        ports:
        - containerPort: 7071
---
apiVersion: v1
kind: Service
metadata:
  name: rest-koa-front
spec:
  type: LoadBalancer
  ports:
  - port: 7071
  selector:
    app: rest-koa-front
