ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rest-koa-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-server
    servicePort: 80
  rules:
  - host: rest-koa.demo
  - http:
      paths:
      - path: /
        backend:
          serviceName: rest-koa-front
          servicePort: 7071
